# nyc-taxi-dbt-analytics

./: .gitignore  README.md  dbt_project.yml  profiles.example.yml  pyproject.toml
.github/workflows/: dbt-ci.yml
analyses/: business_questions.sql
dashboard/: __init__.py  app.py  data_access.py  metrics.py
docs/: architecture.md  resume-bullets.md
macros/: non_negative.sql
models/marts/: fct_taxi_trips.sql  mart_daily_taxi_metrics.sql  mart_route_revenue.sql  schema.yml
models/staging/: schema.yml  stg_taxi_trips.sql
seeds/: raw_taxi_trips.csv
tests/: test_dashboard_metrics.py
