[project]
name = "nyc-taxi-dbt-analytics"
version = "0.1.0"
description = "Public dbt analytics engineering project using NYC taxi trip data."
requires-python = ">=3.10,<3.14"
dependencies = [
  "dbt-core>=1.8,<2.0",
  "dbt-duckdb>=1.8,<2.0"
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
