[project]
name = "nyc-taxi-dbt-analytics"
version = "0.1.0"
description = "Public dbt analytics engineering project using NYC taxi trip data."
requires-python = ">=3.10,<3.14"
dependencies = [
  "dbt-core>=1.8,<2.0",
  "dbt-duckdb>=1.8,<2.0",
  "duckdb>=1.0",
  "pandas>=2.2,<3.0",
  "plotly>=5.24,<6.0",
  "pytest>=8.0,<9.0",
  "streamlit>=1.40,<2.0"
]

[tool.setuptools]
packages = ["dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
